// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsList /> when isLoading=false with results matches its snapshot 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-bottom: 4px;
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            isSelected={false}
            item={
              Object {
                "id": "id",
                "name": "name",
                "template": "text",
              }
            }
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
</div>
`;

exports[`<SuggestionsList /> when isLoading=false without results matches its snapshot 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        width: 280px;
      }
>
  <Block
    className=

        {
          padding-bottom: 17px;
          padding-top: 15px;
        }
    textAlign="center"
    textColor="metadata"
    textSize="small"
  >
    noResultsText
  </Block>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true with results matches its snapshot 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        padding-top: 4px;
        width: 280px;
      }
>
  <LayoutList
    direction="vertical"
  >
    <LayoutListItem
      key="groupTitle"
    >
      <LayoutList
        direction="vertical"
      >
        <LayoutListItem
          key="id"
        >
          <SuggestionsListItem
            isSelected={false}
            item={
              Object {
                "id": "id",
                "name": "name",
                "template": "text",
              }
            }
            onSelect={[MockFunction]}
            searchText="searchText"
          />
        </LayoutListItem>
      </LayoutList>
    </LayoutListItem>
  </LayoutList>
  <div
    className=

        {
          border-top: 1px solid #f3f5f8;
          padding-bottom: 14px;
          padding-top: 13px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;

exports[`<SuggestionsList /> when isLoading=true without results matches its snapshot 1`] = `
<div
  className=
      y-suggestions-list
      y-hc-border
      {
        border-radius: 1px;
        border-width: 0px;
        border: none;
        box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
        width: 280px;
      }
>
  <div
    className=

        {
          padding-bottom: 14px;
          padding-top: 14px;
        }
  >
    <Spinner
      isCentered={true}
      text="loadingText"
    />
  </div>
</div>
`;
